SERVER-16763 Wait infinitely when no timeout has been requested